--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -482,7 +482,9 @@
     <Content Include="Vue\Carregamentos\Itens\Pendencias\Templates\ListaPendenciaCarregamento.Filtro.html" />
     <Content Include="Vue\Carregamentos\OrdensCarga\Componentes\LstOrdensCarga.Filtro.js" />
     <Content Include="Vue\Carregamentos\OrdensCarga\Componentes\LstOrdensCarga.js" />
+    <Content Include="Vue\Carregamentos\OrdensCarga\Componentes\LstOrdensCarga.Pedidos.js" />
     <Content Include="Vue\Carregamentos\OrdensCarga\Templates\LstOrdensCarga.Filtro.html" />
+    <Content Include="Vue\Carregamentos\OrdensCarga\Templates\LstOrdensCarga.Pedidos.html" />
     <Content Include="Vue\Carregamentos\Templates\LstCarregamentos.Filtro.html" />
     <Content Include="Vue\Cfops\NaturezasOperacao\Componentes\LstNaturezasOperacao.js" />
     <Content Include="Vue\Cfops\NaturezasOperacao\RegrasNaturezaOperacao\Componentes\LstRegrasNaturezaOperacao.Filtro.js" />
