#2193 - Refatoração da tela de listagem de compras.

--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -245,8 +245,18 @@
     <Compile Include="Controllers\Clientes\V1\Tipos\GetTiposClienteController.cs" />
     <Compile Include="Controllers\Clientes\V1\Tipos\PatchTiposClienteController.cs" />
     <Compile Include="Controllers\Clientes\V1\Tipos\PostTiposClienteController.cs" />
+    <Compile Include="Controllers\Compras\V1\ComprasController.cs" />
+    <Compile Include="Controllers\Compras\V1\DeleteComprasController.cs" />
+    <Compile Include="Controllers\Compras\V1\GetComprasController.cs" />
+    <Compile Include="Controllers\Compras\V1\PostComprasController.cs" />
     <Compile Include="Controllers\Estoques\V1\Movimentacoes\TiposMovimentacao\GetTiposMovimentacaoController.cs" />
+    <Compile Include="Helper\Compras\TraducaoOrdenacaoListaCompras.cs" />
     <Compile Include="Helper\Estoques\Movimentacoes\Reais\ConverterCadastroAtualizacaoParaMovimentacaoEstoqueReal.cs" />
+    <Compile Include="Models\Compras\V1\Configuracoes\ListaDto.cs" />
+    <Compile Include="Models\Compras\V1\Lista\DatasDto.cs" />
+    <Compile Include="Models\Compras\V1\Lista\FiltroDto.cs" />
+    <Compile Include="Models\Compras\V1\Lista\ListaDto.cs" />
+    <Compile Include="Models\Compras\V1\Lista\PermissoesDto.cs" />
     <Compile Include="Models\Estoques\V1\Movimentacoes\Reais\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Controllers\Estoques\V1\Movimentacoes\Reais\PostMovimentacaoEstoqueRealController.cs" />
     <Compile Include="Controllers\Estoques\V1\Movimentacoes\Reais\DeleteMovimentacaoEstoqueRealController.cs" />
