--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -246,7 +246,10 @@
     <Compile Include="Controllers\Clientes\V1\Tipos\PatchTiposClienteController.cs" />
     <Compile Include="Controllers\Clientes\V1\Tipos\PostTiposClienteController.cs" />
     <Compile Include="Controllers\Estoques\V1\Movimentacoes\TiposMovimentacao\GetTiposMovimentacaoController.cs" />
+    <Compile Include="Controllers\Pagamentos\V1\GetPagamentosController.cs" />
+    <Compile Include="Controllers\Pagamentos\V1\PagamentosController.cs" />
     <Compile Include="Helper\Estoques\Movimentacoes\Reais\ConverterCadastroAtualizacaoParaMovimentacaoEstoqueReal.cs" />
+    <Compile Include="Helper\Pagamentos\TraducaoOrdenacaoListaPagamentos.cs" />
     <Compile Include="Models\Estoques\V1\Movimentacoes\Reais\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Controllers\Estoques\V1\Movimentacoes\Reais\PostMovimentacaoEstoqueRealController.cs" />
     <Compile Include="Controllers\Estoques\V1\Movimentacoes\Reais\DeleteMovimentacaoEstoqueRealController.cs" />
@@ -736,6 +739,9 @@
     <Compile Include="Models\Contabilistas\Lista\DadosContatoDto.cs" />
     <Compile Include="Models\Contabilistas\Lista\FiltroDto.cs" />
     <Compile Include="Models\Contabilistas\Lista\ListaDto.cs" />
+    <Compile Include="Models\Pagamentos\V1\Lista\FiltroDto.cs" />
+    <Compile Include="Models\Pagamentos\V1\Lista\ListaDto.cs" />
+    <Compile Include="Models\Pagamentos\V1\Lista\PermissoesDto.cs" />
     <Compile Include="Models\Parcelas\V1\Configurações\CadastroDto.cs" />
     <Compile Include="Models\Parcelas\V1\Configurações\TipoPagamento.cs" />
     <Compile Include="Models\Parcelas\V1\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
