--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -219,7 +219,12 @@
     <Compile Include="Controllers\Carregamentos\V1\OrdensCarga\Lista\DeleteOrdensCargaController.cs" />
     <Compile Include="Controllers\Carregamentos\V1\OrdensCarga\Lista\GetOrdensCargaController.cs" />
     <Compile Include="Controllers\Carregamentos\V1\OrdensCarga\Lista\OrdensCargaController.cs" />
+    <Compile Include="Controllers\ContasPagar\V1\Pagas\ContasPagasController.cs" />
+    <Compile Include="Controllers\ContasPagar\V1\Pagas\GetContasPagasController.cs" />
+    <Compile Include="Controllers\ContasPagar\V1\Pagas\PatchContasPagasController.cs" />
     <Compile Include="Helper\Carregamentos\OrdensCarga\TraducaoOrdenacaoListaOrdensCarga.cs" />
+    <Compile Include="Helper\ContasPagar\Pagas\ConverterCadastroAtualizacaoParaContasPagas.cs" />
+    <Compile Include="Helper\ContasPagar\Pagas\TraducaoOrdenacaoListaContasPagas.cs" />
     <Compile Include="Models\Carregamentos\V1\OrdensCarga\Lista\Configuracoes\ListaDto.cs" />
     <Compile Include="Controllers\Carregamentos\V1\PatchCarregamentosController.cs" />
     <Compile Include="Controllers\Carregamentos\V1\PostCarregamentosController.cs" />
@@ -270,6 +275,14 @@
     <Compile Include="Helper\ContasPagar\ConverterCadastroAtualizacaoParaContasPagar.cs" />
     <Compile Include="Helper\ContasPagar\TraducaoOrdenacaoListaContasPagar.cs" />
     <Compile Include="Helper\Estoques\Movimentacoes\Reais\ConverterCadastroAtualizacaoParaMovimentacaoEstoqueReal.cs" />
+    <Compile Include="Models\ContasPagar\V1\Pagas\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
+    <Compile Include="Models\ContasPagar\V1\Pagas\Configuracoes\ListaDto.cs" />
+    <Compile Include="Models\ContasPagar\V1\Pagas\Lista\DatasDto.cs" />
+    <Compile Include="Models\ContasPagar\V1\Pagas\Lista\FiltroDto.cs" />
+    <Compile Include="Models\ContasPagar\V1\Pagas\Lista\ListaDto.cs" />
+    <Compile Include="Models\ContasPagar\V1\Pagas\Lista\ObservacoesDto.cs" />
+    <Compile Include="Models\ContasPagar\V1\Pagas\Lista\PermissoesDto.cs" />
+    <Compile Include="Models\ContasPagar\V1\Pagas\Lista\ValoresPagamentoDto.cs" />
     <Compile Include="Models\Estoques\V1\Movimentacoes\Fiscais\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Models\Estoques\V1\Movimentacoes\Fiscais\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\Estoques\V1\Movimentacoes\Fiscais\DadosEstoqueDto.cs" />
