--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -219,10 +219,15 @@
     <Compile Include="Controllers\Carregamentos\V1\OrdensCarga\Lista\DeleteOrdensCargaController.cs" />
     <Compile Include="Controllers\Carregamentos\V1\OrdensCarga\Lista\GetOrdensCargaController.cs" />
     <Compile Include="Controllers\Carregamentos\V1\OrdensCarga\Lista\OrdensCargaController.cs" />
+    <Compile Include="Controllers\ConhecimentosTransporte\Veiculos\ConhecimentoTransporteVeiculosController.cs" />
+    <Compile Include="Controllers\ConhecimentosTransporte\Veiculos\DeleteConhecimentoTransporteVeiculosController.cs" />
+    <Compile Include="Controllers\ConhecimentosTransporte\Veiculos\Proprietarios\Associacoes\GetAssociacaoProprietariosVeiculosController.cs" />
+    <Compile Include="Controllers\ConhecimentosTransporte\Veiculos\Proprietarios\Associacoes\AssociacaoProprietariosVeiculosController.cs" />
     <Compile Include="Controllers\ConhecimentosTransporte\Veiculos\Proprietarios\DeleteProprietariosDeVeiculosController.cs" />
     <Compile Include="Controllers\ConhecimentosTransporte\Veiculos\Proprietarios\GetProprietariosDeVeiculosController.cs" />
     <Compile Include="Controllers\ConhecimentosTransporte\Veiculos\Proprietarios\ProprietariosDeVeiculosController.cs" />
     <Compile Include="Helper\Carregamentos\OrdensCarga\TraducaoOrdenacaoListaOrdensCarga.cs" />
+    <Compile Include="Helper\ConhecimentosTrasporte\Veiculos\Proprietarios\Associacoes\TraducaoOrdenacaoListaAssociacaoProprietariosVeiculos.cs" />
     <Compile Include="Helper\ConhecimentosTrasporte\Veiculos\Proprietarios\TraducaoOrdenacaoListaProprietariosDeVeiculos.cs" />
     <Compile Include="Models\Carregamentos\V1\OrdensCarga\Lista\Configuracoes\ListaDto.cs" />
     <Compile Include="Controllers\Carregamentos\V1\PatchCarregamentosController.cs" />
@@ -274,6 +279,8 @@
     <Compile Include="Helper\ContasPagar\ConverterCadastroAtualizacaoParaContasPagar.cs" />
     <Compile Include="Helper\ContasPagar\TraducaoOrdenacaoListaContasPagar.cs" />
     <Compile Include="Helper\Estoques\Movimentacoes\Reais\ConverterCadastroAtualizacaoParaMovimentacaoEstoqueReal.cs" />
+    <Compile Include="Models\ConhecimentosTransporte\V1\Veiculos\Proprietarios\Associacoes\FiltroDto.cs" />
+    <Compile Include="Models\ConhecimentosTransporte\V1\Veiculos\Proprietarios\Associacoes\ListaDto.cs" />
     <Compile Include="Models\ConhecimentosTransporte\V1\Veiculos\Proprietarios\Lista\FiltroDto.cs" />
     <Compile Include="Models\ConhecimentosTransporte\V1\Veiculos\Proprietarios\Lista\ListaDto.cs" />
     <Compile Include="Models\Estoques\V1\Movimentacoes\Fiscais\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
