--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -515,6 +515,9 @@
     <Content Include="Vue\Pagamentos\Componentes\LstPagamentos.js" />
     <Content Include="Vue\Pagamentos\Templates\LstPagamentos.Filtro.html" />
     <Content Include="Vue\Parcelas\Componentes\CadParcelas.js" />
+    <Content Include="Vue\Produtos\ChapasVidro\Perdas\Componentes\LstPerdasChapasVidro.Filtro.js" />
+    <Content Include="Vue\Produtos\ChapasVidro\Perdas\Componentes\LstPerdasChapasVidro.js" />
+    <Content Include="Vue\Produtos\ChapasVidro\Perdas\Templates\LstPerdasChapasVidro.Filtro.html" />
     <Content Include="Vue\Projetos\Componentes\LstProjetos.Filtro.js" />
     <Content Include="Vue\Projetos\Componentes\LstProjetos.js" />
     <Content Include="Vue\Projetos\Ferragens\FabricantesFerragem\Componentes\LstFabricantesFerragem.js" />
