#2366-refatoração da tela de listagem de arquivos de otimização

--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -211,6 +211,8 @@
     <Compile Include="Controllers\Aplicacoes\V1\DeleteAplicacoesController.cs" />
     <Compile Include="Controllers\Aplicacoes\V1\PatchAplicacoesController.cs" />
     <Compile Include="Controllers\Aplicacoes\V1\PostAplicacoesController.cs" />
+    <Compile Include="Controllers\ArquivoOtimizacao\V1\ArquivosOtimizacaoController.cs" />
+    <Compile Include="Controllers\ArquivoOtimizacao\V1\GetArquivosOtimizacaoController.cs" />
     <Compile Include="Controllers\Boletos\V1\GetBoletosController.cs" />
     <Compile Include="Controllers\Boletos\V1\BoletosController.cs" />
     <Compile Include="Controllers\Carregamentos\V1\CarregamentosController.cs" />
@@ -239,8 +241,12 @@
     <Compile Include="Helper\ContasPagar\Pagas\ConverterCadastroAtualizacaoParaContasPagas.cs" />
     <Compile Include="Helper\ContasPagar\Pagas\TraducaoOrdenacaoListaContasPagas.cs" />
     <Compile Include="Helper\Produtos\PrecosTabelaCliente\TraducaoOrdenacaoListaPrecoTabelaCliente.cs" />
-    <Compile Include="Models\ArquivosOtimizacao\V1\FiltroDto.cs" />
-    <Compile Include="Models\ArquivosOtimizacao\V1\ListaDto.cs" />
+    <Compile Include="Models\ArquivosOtimizacao\V1\Configuracoes\ListaDto.cs" />
+    <Compile Include="Models\ArquivosOtimizacao\V1\Lista\ArquivoDto.cs" />
+    <Compile Include="Models\ArquivosOtimizacao\V1\Lista\DirecaoDto.cs" />
+    <Compile Include="Models\ArquivosOtimizacao\V1\Lista\FiltroDto.cs" />
+    <Compile Include="Models\ArquivosOtimizacao\V1\Lista\ListaDto.cs" />
+    <Compile Include="Models\ArquivosOtimizacao\V1\Lista\PermissoesDto.cs" />
     <Compile Include="Models\Carregamentos\V1\OrdensCarga\Lista\Configuracoes\ListaDto.cs" />
     <Compile Include="Controllers\Carregamentos\V1\PatchCarregamentosController.cs" />
     <Compile Include="Controllers\Carregamentos\V1\PostCarregamentosController.cs" />
