--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -519,6 +519,9 @@
     <Content Include="Vue\Pagamentos\Componentes\LstPagamentos.js" />
     <Content Include="Vue\Pagamentos\Templates\LstPagamentos.Filtro.html" />
     <Content Include="Vue\Parcelas\Componentes\CadParcelas.js" />
+    <Content Include="Vue\Produtos\MateriaPrima\ChapasDisponiveis\Componentes\LstChapasDisponiveis.Filtro.js" />
+    <Content Include="Vue\Produtos\MateriaPrima\ChapasDisponiveis\Componentes\LstChapasDisponiveis.js" />
+    <Content Include="Vue\Produtos\MateriaPrima\ChapasDisponiveis\Templates\LstChapasDisponiveis.Filtro.html" />
     <Content Include="Vue\Produtos\PrecosTabelaCliente\Componentes\ListaPrecoTabelaCliente.Filtro.js" />
     <Content Include="Vue\Produtos\PrecosTabelaCliente\Componentes\ListaPrecoTabelaCliente.js" />
     <Content Include="Vue\Produtos\PrecosTabelaCliente\Templates\ListaPrecoTabelaCliente.Filtro.html" />
